# vnpy_portfoliostrategy

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pythonapp.yml
repo/: 204001_SSE_daily.csv  import_data.py  repo_backtesting.ipynb  repo_backtesting.py  repo_strategy.py
script/: run.py
vnpy_portfoliostrategy/: __init__.py  backtesting.py  base.py  engine.py  template.py  utility.py
vnpy_portfoliostrategy/locale/: build_hook.py  vnpy_portfoliostrategy.pot
vnpy_portfoliostrategy/locale/en/LC_MESSAGES/: vnpy_portfoliostrategy.po
vnpy_portfoliostrategy/strategies/: pair_trading_strategy.py  pcp_arbitrage_strategy.py  portfolio_boll_channel_strategy.py  trend_following_strategy.py
vnpy_portfoliostrategy/ui/: __init__.py  widget.py
